# image_eyetrack

./: .gitignore  .gitmodules  README.md  config.yaml  pyproject.toml  requirements.txt
image_eyetrack/: recorder.py  runner.py  tracker.py  viewer.py
