[tool.poetry]
name = "image_eyetrack"
version = "0.1.0"
description = ""
authors = ["YMiyanohara <miyanohara@isi.imi.i.u-tokyo.ac.jp>"]
readme = "README.md"
packages = [{include = "image_eyetrack"},
{ include = "tobii_remote", from = "libs/tobii_remote" }]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0.66"
PyYAML = "^6.0"
grpcio = "^1.51.1"
grpcio-tools = "^1.51.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
